<resources>
    <string name="app_name">Sary</string>
    <string name="try_again">Try Again</string>
    <string name="title_my_page">My Page</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="orders">Orders</string>
    <string name="search">Search</string>
    <string name="store">Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>