<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_store"
        android:title="@string/store" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/orderFragment"
        android:icon="@drawable/ic_orders"
        android:title="@string/orders" />

    <item
        android:id="@+id/subscriptionsFragment"
        android:icon="@drawable/ic_subscriptions"
        android:title="@string/subscriptions" />

    <item
        android:id="@+id/myPageFragment"
        android:icon="@drawable/ic_my_page"
        android:title="@string/title_my_page" />

</menu>